<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_food_tracker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comjschmulandandroidgroupproject.httpsgithub.androidgroupproject.FoodTracker">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/foodHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loadingText"
        android:layout_above="@+id/progressBar"
        android:layout_centerHorizontal="true" />

    <ListView
        android:id="@+id/foodList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/dateTimeLayout"
        android:layout_alignParentTop="true"
        android:background="@android:color/background_light" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/inputLayout"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/foodInput"
            android:layout_weight="1"
            android:focusable="false"
            style="@style/Widget.AppCompat.EditText"
            android:hint="@string/food" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/calorieInput"
            android:focusable="false"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.EditText"
            android:hint="@string/calories" />

        <Button
            android:text="@string/AddFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addItemButton"
            style="@style/Widget.AppCompat.Button" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dateTimeLayout"
        android:layout_above="@+id/inputLayout"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/dateInput"
            android:focusable="false"
            android:layout_weight="1"
            android:hint="@string/date" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:ems="10"
            android:id="@+id/timeInput"
            android:focusable="false"
            android:layout_weight="1"
            android:hint="@string/time" />
    </LinearLayout>

</RelativeLayout>
