<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="comjschmulandandroidgroupproject.httpsgithub.androidgroupproject.Exercise">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/timeEditText"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textTimeSpentView"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp"
            android:layout_toStartOf="@+id/textViewMinutes"
            android:hint="@string/timeInMinutes"
            android:maxLength="4" />


        <TextView
            android:id="@+id/textTimeSpentView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="27dp"
            android:text="@string/timeInMinutesView"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewMinutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/timeEditText"
            android:layout_alignBottom="@+id/timeEditText"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:text="@string/viewMinutes"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/exerciseImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignTop="@+id/textViewMinutes"
            android:layout_centerHorizontal="true"
            app:srcCompat="@android:drawable/sym_def_app_icon" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ListView
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:id="@+id/exerciseListView"
        android:background="#7f7c80"
        android:layout_below="@+id/exerciseChoice"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/exerciseListView" />

    <TextView
        android:id="@+id/exerciseChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exerciseTextView"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp" />

    </RelativeLayout>

</LinearLayout>
