<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_sleep_tracker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="comjschmulandandroidgroupproject.httpsgithub.androidgroupproject.SleepTracker"
    tools:showIn="@layout/activity_template">




    <ListView
        android:id="@+id/sleepListView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"/>


    <ToggleButton
        android:id="@+id/sleepToggleBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sleepListView"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:textOff="@string/Awake"
        android:textOn="@string/Sleeping" />
    <Button
        android:id="@+id/sleep_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/sleepToggleBtn"
        android:layout_alignTop="@id/sleepToggleBtn"
        android:layout_alignParentEnd="true"
        android:text="@string/Set" />

    <Chronometer
        android:id="@+id/chronometer5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/sleepToggleBtn"
        android:layout_alignTop="@id/sleepToggleBtn"
        android:layout_toEndOf="@+id/sleepToggleBtn"
        android:layout_toStartOf="@id/sleep_set"
        android:format="HH:MM:SS"
        android:gravity="center" />

    <FrameLayout
        android:id="@+id/sleepFragmentHolder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/sleepToggleBtn"
        android:layout_marginBottom="10dp"
        >

    </FrameLayout>



</RelativeLayout>
