<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="comjschmulandandroidgroupproject.httpsgithub.androidgroupproject.MainActivity">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/progressBar" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="2"
        android:foregroundGravity="center">


        <LinearLayout
            android:orientation="vertical"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="center"
            android:id="@+id/mainSleepBtn"
            android:clickable="true">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/sym_def_app_icon"
                android:id="@+id/imageButton0"
                android:clickable="false" />

            <TextView
                android:text="@string/title_activity_sleep_tracker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView0"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="center"
            android:weightSum="1"
            android:id="@+id/mainExcerciseBtn"
            android:clickable="true">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/sym_def_app_icon"
                android:id="@+id/imageButton1"
                android:clickable="false" />

            <TextView
                android:text="@string/exercise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView1"
                android:layout_weight="0.31" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="center"
            android:id="@+id/mainFoodBtn"
            android:clickable="true">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/sym_def_app_icon"
                android:id="@+id/imageButton2"
                android:clickable="false" />

            <TextView
                android:text="@string/foodTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_gravity="center"
            android:weightSum="1"
            android:id="@+id/mainMealBtn"
            android:clickable="true">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/sym_def_app_icon"
                android:id="@+id/imageButton3"
                android:clickable="false" />

            <TextView
                android:text="@string/mealTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_weight="0.31" />

        </LinearLayout>
    </GridLayout>

</RelativeLayout>
